deploy.demo/vbbu.deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: du-deployment1
  namespace: baicell
  labels:
    app: du-deployment1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: du-pod1
  template:
    metadata:
      labels:
        app: du-pod1
    spec:
      containers:
      - name: du-container1
        image: "quay.io/baicell/fpga-driver:set_ip.v06"
        imagePullPolicy: IfNotPresent
        tty: true
        stdin: true
        command: ["/usr/sbin/init"]
        # - sleep
        # - infinity
        securityContext:
            privileged: true
            capabilities:
                add:
                - CAP_SYS_ADMIN
        volumeMounts:
          - name: lib-modules
            mountPath: /lib/modules
          - name: src
            mountPath: /usr/src
          - name: dev
            mountPath: /dev
          - name: cache-volume
            mountPath: /dev/shm
          # - name: license-volume
          #   mountPath: /baicell/lic    
        resources:
          requests:
            cpu: 1
            memory: 1Gi
          limits:
            cpu: 1
            memory: 1Gi
      volumes:
        - name: lib-modules
          hostPath:
            path: /lib/modules
        - name: src
          hostPath:
            path: /usr/src
        - name: dev
          hostPath:
            path: "/dev"
        - name: cache-volume
          emptyDir:
            medium: Memory
            sizeLimit: 1Gi
        # - name: license-volume
        #   configMap:
        #     name: license.for.baicell
        #     items:
        #     - key: license
        #       path: license.lic
      nodeSelector:
        node-role.kubernetes.io/worker: ""
      serviceAccountName: demo
