deploy.demo/vbbu.route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: du-http 
  # namespace: baicell
spec:
  port:
    targetPort: 80
  to:
    kind: Service
    name: du-http
